[package]
name = "soakd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
paho-mqtt = { version = "0.12", default-features = false, features = ["ssl"]}
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
ctrlc = { version = "3.4.0", features = ["termination"] }
gpiochip = "0.1.1"
